--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/backend": "^1.23.4",
     "@clerk/nextjs": "^6.9.11",
+    "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.4.2",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.2",
