--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
+    "react-use": "^17.6.0",
     "recharts": "^2.15.0",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
