--- a/package.json
+++ b/package.json
@@ -55,11 +55,13 @@
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.1",
     "react": "^19.0.0",
+    "react-currency-input-field": "^3.9.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
+    "react-select": "^5.10.0",
     "react-use": "^17.6.0",
     "recharts": "^2.15.0",
     "sonner": "^1.7.2",
