--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-papaparse": "^4.4.0",
     "react-resizable-panels": "^2.1.7",
     "react-select": "^5.10.0",
     "react-use": "^17.6.0",
