--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.1",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.9.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
