--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.1",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.9.0",
